fix: stack price below service info on mobile dashboard rows

--- a/src/app/profile/dashboard.module.scss
+++ b/src/app/profile/dashboard.module.scss
@@ -364,6 +364,8 @@
 
   .dash__service_price {
     font-size: 13px;
+    flex: 0 0 100%;
+    text-align: right;
   }
 }
 
